--- a/JumpyJumpGame/Packages/manifest.json
+++ b/JumpyJumpGame/Packages/manifest.json
@@ -9,6 +9,7 @@
     "com.unity.ide.visualstudio": "1.0.5",
     "com.unity.ide.vscode": "1.0.4",
     "com.unity.package-manager-ui": "2.2.0",
+    "com.unity.probuilder": "4.0.5",
     "com.unity.render-pipelines.lightweight": "6.7.1",
     "com.unity.test-framework": "1.0.13",
     "com.unity.textmeshpro": "2.0.1",
